Add image links and add descriptions and lists to paella page.

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Apple Pie</h1>
-    <br>
+    <img src="../images/pie.png" alt="An image of an apple pie dish">
     <br>
     <a href="../index.html">Return to Recipes</a>
 </body>
