--- a/recipes/meat-stew.html
+++ b/recipes/meat-stew.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Meat Stew</h1>
-    <br>
+    <img src="../images/stew.png" alt="An image of a meat stew dish">
     <br>
     <a href="../index.html">Return to Recipes</a>
 </body>
