Add 'Description' heading to paella page and make other misc amendments.

--- a/recipes/seafood-paella.html
+++ b/recipes/seafood-paella.html
@@ -10,14 +10,14 @@
     <h1>Seafood Paella</h1>
 
     <img src="../images/paella.png" alt="An image of a seafood paella dish">
-
-    <h3>When lifes gives you fish and rice, make seafood paella</h3>
+    <h3>Description</h3>
+    <p><strong><em>When lifes gives you fish and rice, make seafood paella</em></strong></p>
     <p>The dish of choice for beach dwellers and sailors of the open seas. 
         Legend has it that this <em>maritime feast</em> was first created 
-        by a fishwife from <strong>Lurelin village</strong> to celebrate her 
+        by a fishwife<br> from <strong>Lurelin village</strong> to celebrate her 
         husband's return from the sea. It is still a popular recipe to this day
         and is a welcome sight.</p>
-    <br>
+    
     <h4>Ingredients</h4>        
     <ul>
         <li>1 Mighty or Armoured Porgy</li>
@@ -28,13 +28,13 @@
     </ul>
     <h4>Steps</h4>
     <ol>
-        <li>Fillet the porgy and chop into thick chunks</li>
+        <li>Fillet the porgy and chop into <em>thick</em> chunks</li>
         <li>Remove the snail from it's shell and slice into thin strips</li>
         <li>Heat up the cooking pot with a good size fire and add the goat butter</li>
         <li>Add the porgy and snail to the pan and stir into the melted butter</li>
         <li>Add the rice and let it cook until done</li>
         <li>Sprinkle in the rock salt and stir</li>
-        <li>Spoon generous portions into bowls and serve</li>
+        <li>Spoon <em>generous</em> portions into bowls and serve</li>
     </ol>
     <br>
     <a href="../index.html">Return to Recipes</a>
