Add subtance to stew page. Re-order recipes on index page and make minor changes to paella page.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <br>
+    <a href="./recipes/meat-stew.html">Meat Stew</a><br>
     <a href="./recipes/seafood-paella.html">Seafood Paella</a><br>
     <a href="./recipes/apple-pie.html">Apple Pie</a><br>
-    <a href="./recipes/meat-stew.html">Meat Stew</a>
 </body>
 </html>
