--- a/recipes/meat-stew.html
+++ b/recipes/meat-stew.html
@@ -9,6 +9,31 @@
 <body>
     <h1>Meat Stew</h1>
     <img src="../images/stew.png" alt="An image of a meat stew dish">
+    <h3>Description</h3>
+    <p><strong><em>A hearty meal for a hearty soul</em></strong></p>
+    <p>The origin of this simple dish has been <em>lost to the ages</em> but what known for certain is that this
+    simple dish is a favourite in every household in<br> the land. It's appeal is it's ability to fill any stomach 
+    whilst delighting the tongue with <em>rich tastes</em> with only simple ingredients.</p>
+    
+    <h4>Ingredients</h4>        
+    <ul>
+        <li>Raw Meat</li>
+        <li>200g Tabantha Wheat</li>
+        <li>100g Goat Butter</li>
+        <li>500ml Fresh Milk</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Dice the raw meat into suitable sized chunks</li>
+        <li>Grind the wheat into a powder </li>
+        <li>Heat up the cooking pot and add the butter</li>
+        <li>Add the chunks to the cooking pot and sear until brown</li>
+        <li>Add the milk to the cooking pot and stir in the wheat until it thickens </li>
+        <li>Allow the stew to boil for <strong>20 mins</strong>, stirring periodically</li>
+        <li>Add any <em>spices or herbs</em> for taste</li>
+        <li>Serve into bowls, allow to cool and enjoy!</li>
+    </ol>
+    
     <br>
     <a href="../index.html">Return to Recipes</a>
 </body>
