--- a/recipes/seafood-paella.html
+++ b/recipes/seafood-paella.html
@@ -16,7 +16,7 @@
         Legend has it that this <em>maritime feast</em> was first created 
         by a fishwife<br> from <strong>Lurelin village</strong> to celebrate her 
         husband's return from the sea. It is still a popular recipe to this day
-        and is a welcome sight.</p>
+        and is a welcome sight on the<br> dinner table.</p>
     
     <h4>Ingredients</h4>        
     <ul>
