--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Recipes from the Wild</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recipes of the Wild</h1>
+    <img src="images/cooking.jpeg" alt="Cartoon Link and Zelda sharing a meal from a cooking pot">
     <br>
-    <a href="./recipes/meat-stew.html">Meat Stew</a><br>
-    <a href="./recipes/seafood-paella.html">Seafood Paella</a><br>
-    <a href="./recipes/apple-pie.html">Apple Pie</a><br>
+    <ul>
+        <li><a href="./recipes/meat-stew.html">Meat Stew</a></li><br>
+        <li><a href="./recipes/seafood-paella.html">Seafood Paella</a></li><br>
+        <li><a href="./recipes/apple-pie.html">Apple Pie</a></li>
+    </ul>
 </body>
 </html>
