--- a/recipes/meat-stew.html
+++ b/recipes/meat-stew.html
@@ -22,10 +22,11 @@
         <li>100g Goat Butter</li>
         <li>500ml Fresh Milk</li>
     </ul>
+
     <h4>Steps</h4>
     <ol>
         <li>Dice the raw meat into suitable sized chunks</li>
-        <li>Grind the wheat into a powder </li>
+        <li>Grind the wheat into flour </li>
         <li>Heat up the cooking pot and add the butter</li>
         <li>Add the chunks to the cooking pot and sear until brown</li>
         <li>Add the milk to the cooking pot and stir in the wheat until it thickens </li>
@@ -33,7 +34,7 @@
         <li>Add any <em>spices or herbs</em> for taste</li>
         <li>Serve into bowls, allow to cool and enjoy!</li>
     </ol>
-    
+
     <br>
     <a href="../index.html">Return to Recipes</a>
 </body>
